# UMM-DKU

./: .gitignore  2024 UMM 교내 캡스톤디자인(종합설계) 경진대회 전시 포스터 .pptx  README.md  main_map.pgm  vertopal.com_main_map.pgm
Arduino/: bluetooth.ino  mega.ino  uno.ino
Arduino/mega/: mega.ino
camera_ws/: camea_data.py  fruit_train.py
camera_ws/fruit_detection.v1i.yolov5pytorch/: README.dataset.txt  README.roboflow.txt  data.yaml
camera_ws/fruit_detection.v1i.yolov5pytorch/test/labels/: frame_000003_20241125_135254_287680_jpg.rf.bea6ef290872bb1f9f832665f0515229.txt  frame_000006_20241125_135255_894022_jpg.rf.3e67731dd2228ae51f7211851ce5b6fd.txt  frame_000011_20241125_140121_736958_jpg.rf.54f926016891c75bd0e5fcb861b3d189.txt  (+222 more)
camera_ws/fruit_detection.v1i.yolov5pytorch/train/: labels.cache
camera_ws/fruit_detection.v1i.yolov5pytorch/valid/: labels.cache
lidar_ws/devel/: .catkin  .rosinstall  setup.sh
main_ws/devel/: .catkin  _setup_util.py  setup.sh
main_ws/devel/lib/pkgconfig/: control.pc
main_ws/src/control/: CMakeLists.txt  package.xml
main_ws/src/control/config/: base_local_planner_params.yaml  cartographer_config.lua  costmap_common_params.yaml  ekf_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
main_ws/src/control/launch/: laser_scan_matcher.launch  main.launch  move_base.launch  slam.launch
main_ws/src/control/maps/: main_map.yaml  map.pgm  map.yaml
main_ws/src/control/rviz/: lab.rviz  main.rviz  move_base1.rviz
main_ws/src/control/scripts/: scan_to_odom.py
runs/train/exp/: opt.yaml  results.csv
slam_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ws_moveit/install/: local_setup.sh  setup.sh
ws_moveit/log/: latest_build
(+4963 files in other folders)
